--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="pt-br">
 
     <head>
-        <!-- O que essa parte faz? define a codificação de caracteres -->
+        <!-- define a codificação de caracteres -->
         <meta charset="UTF-8">
 
-        <!-- O que essa parte faz? Exibição da pagina -->
+        <!-- Exibição da pagina -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <!-- O que essa parte faz? Titulo da pagina -->
-        <title>Meu primeiro peixe</title>
+        <!-- O Titulo da pagina -->
+        <title>Rafael Barbosa</title>
 
         <style>
             body {
@@ -21,17 +21,17 @@
             }
         </style>
         
-        <!-- O que essa parte faz? inclui o script da biblioteca phaser--> 
+        <!-- inclui o script da biblioteca phaser--> 
         <script src="phaser.js"></script>
     </head>
 
     <script> 
+    //resposta para a pergunta "tem experiência com programação"
     var resposta = "tenho alguma experiência mas não programo muito bem. Fiz um ano de ciência da computação e aprendi o básico";
-    console.log(resposta);
+    console.log(resposta);                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                  
 
 
     </script>
-
 
     <body>
         <!-- O que essa parte faz? inclui o peixe-->
